--- a/template.yaml
+++ b/template.yaml
@@ -141,24 +141,23 @@ Resources:
       ValidationSettings:
         Mode: STRICT
 
-  # AllowAdminGroupFullAccessPolicy:
-  #   Type: AWS::VerifiedPermissions::Policy
-  #   Properties:
-  #     PolicyStoreId: !Ref VisitorManagementPolicyStore
-  #     Definition:
-  #       Static:
-  #         Statement: !Sub |
-  #           permit(
-  #             principal in VisitorManagement::UserGroup::"${AdminGroupName}",
-  #             action in [
-  #               VisitorManagement::Action::"searchVisitor",
-  #               VisitorManagement::Action::"registerVisitor",
-  #               VisitorManagement::Action::"inviteVisitor",
-  #               VisitorManagement::Action::"verifyVisitor",
-  #               VisitorManagement::Action::"browseVisitors"
-  #             ],
-  #             resource in VisitorManagement::Visitor::"visitorResource"
-  #           );
+  AllowAdminGroupFullAccessPolicy:
+    Type: AWS::VerifiedPermissions::Policy
+    Properties:
+      PolicyStoreId: !Ref VisitorManagementPolicyStore
+      Definition:
+        Static:
+          Statement: !Sub |
+            permit (
+                principal in VisitorManagement::UserGroup::${AdminGroupName},
+                action in
+                    [VisitorManagement::Action::"browseVisitors",
+                    VisitorManagement::Action::"inviteVisitor",
+                    VisitorManagement::Action::"registerVisitor",
+                    VisitorManagement::Action::"searchVisitor",
+                    VisitorManagement::Action::"verifyVisitor"],
+                resource == VisitorManagement::Visitor::"visitorResource"
+            );
 
   ApiGatewayApi:
     Type: AWS::Serverless::Api
