--- a/template.yaml
+++ b/template.yaml
@@ -159,6 +159,35 @@ Resources:
                 resource == VisitorManagement::Visitor::"visitorResource"
             );
 
+    AllowResidentGroupAccessPolicy:
+      Type: AWS::VerifiedPermissions::Policy
+      Properties:
+        PolicyStoreId: !Ref VisitorManagementPolicyStore
+        Definition:
+          Static:
+            Statement: !Sub |
+              permit (
+                  principal in VisitorManagement::UserGroup::"${ResidentGroupName}",
+                  action in
+                      [VisitorManagement::Action::"browseVisitors",
+                      VisitorManagement::Action::"inviteVisitor",
+                      VisitorManagement::Action::"registerVisitor"],
+                  resource == VisitorManagement::Visitor::"visitorResource"
+              );
+
+    AllowGuardGroupAccessPolicy:
+      Type: AWS::VerifiedPermissions::Policy
+      Properties:
+        PolicyStoreId: !Ref VisitorManagementPolicyStore
+        Definition:
+          Static:
+            Statement: !Sub |
+              permit (
+                  principal in VisitorManagement::UserGroup::"${GuardGroupName}",
+                  action in [VisitorManagement::Action::"verifyVisitor"],
+                  resource == VisitorManagement::Visitor::"visitorResource"
+              );
+
   ApiGatewayApi:
     Type: AWS::Serverless::Api
     Properties:
