--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.5",
     "core-js": "^3.18.1",
