--- a/template.yaml
+++ b/template.yaml
@@ -778,3 +778,6 @@ Globals:
   Function:
     LoggingConfig:
       LogFormat: JSON
+    Environment:
+      Variables:
+        AWS_REGION: !Ref "AWS::Region"
